egress-demo/manifests/01-apps-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-client
  namespace: egress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egress-client
  template:
    metadata:
      labels:
        app: egress-client
    spec:
      containers:
        - name: curl
          image: curlimages/curl:8.7.1
          command: ["sh", "-c", "sleep 365d"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: egress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:5678"
            - "-text=hello-from-echo-server"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: egress-demo
spec:
  selector:
    app: echo-server
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
